# Multithreaded

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
benches/: server_bench.rs
src/: config.rs  lib.rs  main.rs  metrics.rs
src/db/: mod.rs  models.rs  pool.rs
src/http/: mod.rs  request.rs  response.rs  router.rs
src/middleware/: auth.rs  concurrency.rs  logging.rs  mod.rs  rate_limiter.rs
src/proxy/: mod.rs
src/server/: connection.rs  mod.rs  task.rs
src/session/: mod.rs
src/static_files/: mime.rs  mod.rs
src/templates/: mod.rs
src/tls/: acceptor.rs  mod.rs
static/: index.html
templates/: base.html  index.html  items.html  login.html  metrics.html
tests/: phase1_integration.rs  phase2_integration.rs  phase4_integration.rs  phase5_integration.rs  phase6_integration.rs  phase7_integration.rs  phase8_integration.rs  proxy_integration.rs
