[package]
name = "rust-highperf-server"
version = "0.1.0"
edition = "2021"
description = "A high-performance production-ready multithreaded HTTP/HTTPS web server"

[features]
default = []
# Phase 7: Enable HTTPS via rustls (uncomment deps in Cargo.toml when activating)
https = []
# Phase 4+: Enable Prometheus-compatible metrics endpoint
metrics = []
# Phase 9: Enable PostgreSQL backend in addition to SQLite.
# When enabled, DATABASE_URL must be a postgres:// URL.
# Compile with: cargo build --features postgres
postgres = []

[dependencies]
# Async runtime and networking
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "sync", "time", "signal", "macros"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"] }
http-body-util = "0.1"
bytes = "1"

# Middleware and utilities
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP parsing
httparse = "1.8"

# TLS — Phase 7: HTTPS via rustls (pure Rust, no OpenSSL dependency)
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Filesystem & speed
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Concurrent data structures
dashmap = "6"

# Phase 8: JWT authentication, SQLite persistence, unique IDs
jsonwebtoken = "9"
# SQLite is always compiled in.  Enable the `postgres` Cargo feature to also
# compile the PostgreSQL backend (requires libpq or a compatible driver).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "derive"] }
uuid = { version = "1", features = ["v4"] }

# Phase 9: HTML templating (full web app support)
tera = "1"

# Phase 9: Secure cookie-based session management (HMAC-SHA256 signed cookies)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# URL percent-decoding for HTML form submissions
percent-encoding = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3"
proptest = "1"
rcgen = { version = "0.13", features = ["pem"] }

[[bench]]
name = "server_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"        # Faster than "fat" with near-identical gains
codegen-units = 1   # Single unit for maximum inlining
panic = "abort"     # Smaller binary, faster — no unwinding in production
strip = "debuginfo" # Remove debug info but keep symbols for backtraces

[profile.bench]
inherits = "release"
debug = true        # Keep debug info for profiling with perf/flamegraph
